src/objects/seoThemeKeywords__c.object
<CustomObject>
    <fields>
        <fullName>Adwords_Competition__c</fullName>
        <label>Competitiveness</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amp_URL__c</fullName>
        <label>Amp URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bing_Current__c</fullName>
        <label>Bing Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bing_Last_Report__c</fullName>
        <label>Bing Last Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bing_Original__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bing Original</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bing_Yesterday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bing Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bing__c</fullName>
        <formula>IF(Bing_Last_Report__c &gt; Bing_Current__c , TEXT(Bing_Current__c) + &apos; (&apos; + IMAGE(&apos;http://sponsoredlinx.com/seobot/images/uparrow.png&apos;, &apos;&apos;,10,10) + TEXT(Bing_Last_Report__c - Bing_Current__c) + &apos;)&apos;, 

IF(Bing_Last_Report__c &lt; Bing_Current__c , TEXT(Bing_Current__c) + &apos; (&apos; +IMAGE(&apos;http://sponsoredlinx.com/seobot/images/downarrow.png&apos;, &apos;&apos;,10,10) + TEXT(Bing_Current__c - Bing_Last_Report__c) +&apos;)&apos;, 

IF(Bing_Current__c = 100,&apos;~&apos;,TEXT(Bing_Current__c)) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <inlineHelpText>Override the SEO website&apos;s default geolocation to use a specific geolocation for this keyword only. Leave blank to use the SEO website&apos;s default setting.</inlineHelpText>
        <label>Geolocation</label>
        <picklist>
            <picklistValues>
                <fullName>Adelaide,South Australia,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alice Springs,Northern Territory,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auckland,Auckland,New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballarat,Victoria,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belfast,Northern Ireland,United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brisbane,Queensland,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundaberg,Queensland,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caboolture,Caboolture,Queensland,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cairns,Queensland,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambridge,Waikato,New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canberra,Australian Capital Territory,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Coast,New South Wales,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chermside,Queensland,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago,Illinois,United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christchurch,Canterbury,New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darwin,Northern Territory,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubbo,New South Wales,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geelong,Victoria,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasgow,Scotland,United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Coast,Queensland,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gympie,Queensland,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hervey Bay,Queensland,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hobart,Tasmania,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houston,Texas,United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lismore,New South Wales,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London,England,United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles,California,United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mackay,Queensland,Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester,England,United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maroochydore,Queensland,Australia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Current_Page__c</fullName>
        <label>Google Current Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Current__c</fullName>
        <label>Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Keyword_Including__c</fullName>
        <label>Google Keyword Including</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Keyword_Showing__c</fullName>
        <label>Google Keyword Showing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Knowledge_Panel__c</fullName>
        <label>Google Knowledge Panel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Last_Report__c</fullName>
        <label>Google Last Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Month3__c</fullName>
        <label>Google Month3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Month6__c</fullName>
        <label>Google Month6</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Original__c</fullName>
        <label>Original</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Places_Current__c</fullName>
        <label>Google Places Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Places_Last_Report__c</fullName>
        <label>Google Places Last Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Places_Original__c</fullName>
        <label>Google Places Original</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Places_Yesterday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Google Places Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Places__c</fullName>
        <formula>IF(Google_Places_Last_Report__c &gt; Google_Places_Current__c , TEXT(Google_Places_Current__c) + &apos; (&apos; + IMAGE(&apos;https://sponsoredlinx.com.au/seobot/images/uparrow.png&apos;, &apos;&apos;,10,10) + TEXT(Google_Places_Last_Report__c - Google_Places_Current__c) + &apos;)&apos;, 

IF(Google_Places_Last_Report__c &lt; Google_Places_Current__c , TEXT(Google_Places_Current__c) + &apos; (&apos; +IMAGE(&apos;https://sponsoredlinx.com.au/seobot/images/downarrow.png&apos;, &apos;&apos;,10,10) + TEXT(Google_Places_Current__c - Google_Places_Last_Report__c) +&apos;)&apos;, 

IF(Google_Places_Current__c = 100,&apos;~&apos;,TEXT(Google_Places_Current__c)) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Places</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Result_Count__c</fullName>
        <label>Google Total Results</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Results_Page1__c</fullName>
        <label>Google Results Page1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Results_Page2__c</fullName>
        <label>Google Results Page2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Sitelinks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Sitelinks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Stored_SERP__c</fullName>
        <formula>IF( TODAY() - Last_Crawl_Date__c &lt;= 7 &amp;&amp; Google_Stored_URL__c != &apos;&apos;, 
&apos;Page &apos;+
HYPERLINK(Google_Stored_URL__c+&apos;.page-1.&apos;+TEXT(Last_Crawl_Date__c)+&apos;.html&apos;,&apos;1&apos;)+&apos; &apos;+
HYPERLINK(Google_Stored_URL__c+&apos;.page-2.&apos;+TEXT(Last_Crawl_Date__c)+&apos;.html&apos;,&apos;2&apos;)+&apos; &apos;+
HYPERLINK(Google_Stored_URL__c+&apos;.page-3.&apos;+TEXT(Last_Crawl_Date__c)+&apos;.html&apos;,&apos;3&apos;)+&apos; &apos;+
HYPERLINK(Google_Stored_URL__c+&apos;.page-4.&apos;+TEXT(Last_Crawl_Date__c)+&apos;.html&apos;,&apos;4&apos;)
+ IF(Google_Current_Page__c &gt;= 5, &apos; &apos;+HYPERLINK(Google_Stored_URL__c+&apos;.page-5.&apos;+TEXT(Last_Crawl_Date__c)+&apos;.html&apos;,&apos;5&apos;), &apos;&apos;)
+ IF(Google_Current_Page__c &gt;= 6 &amp;&amp; Google_Current_Page__c &lt;= 10, &apos; ... &apos;+HYPERLINK(Google_Stored_URL__c+&apos;.page-&apos;+TEXT(Google_Current_Page__c)+&apos;.&apos;+TEXT(Last_Crawl_Date__c)+&apos;.html&apos;,TEXT(Google_Current_Page__c)), &apos;&apos;)
, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SERP Snapshot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Stored_URL__c</fullName>
        <label>SERP Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Top_Unstable_Rank__c</fullName>
        <description>The highest rank at which there is regular movement. Ranks above this may be difficult to obtain.</description>
        <label>Top Unstable Rank</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_URL_Cache_Time__c</fullName>
        <label>Google Cached</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Google_URL_Landing_1__c</fullName>
        <label>Google URL Landing 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Google_URL_Landing_2__c</fullName>
        <label>Google URL Landing 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Google_URL_Landing_3__c</fullName>
        <label>Google URL Landing 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Google_URL_Landing_Relative_1__c</fullName>
        <formula>HYPERLINK(Google_URL_Landing_1__c, 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Google_URL_Landing_1__c, seoWebsites__r.website_url__c , &apos;&apos;), &apos;http://&apos;, &apos;&apos;), &apos;https://&apos;, &apos;&apos;), &apos;www.&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landing Page 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_URL_Landing_Relative_2__c</fullName>
        <formula>HYPERLINK(Google_URL_Landing_2__c, 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Google_URL_Landing_2__c, seoWebsites__r.website_url__c , &apos;&apos;), &apos;http://&apos;, &apos;&apos;), &apos;https://&apos;, &apos;&apos;), &apos;www.&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landing Page 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_URL_Landing_Relative_3__c</fullName>
        <formula>HYPERLINK(Google_URL_Landing_3__c, 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Google_URL_Landing_3__c, seoWebsites__r.website_url__c , &apos;&apos;), &apos;http://&apos;, &apos;&apos;), &apos;https://&apos;, &apos;&apos;), &apos;www.&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Landing Page 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_URL_Relative__c</fullName>
        <description>Relative URL</description>
        <formula>HYPERLINK(Google_URL__c, 
LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Google_URL__c,  seoWebsites__r.website_url__c , &apos;&apos;), &apos;http://&apos;, &apos;&apos;), &apos;https://&apos;, &apos;&apos;), &apos;www.&apos;, &apos;&apos;), 80))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google URL (Relative)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_URL__c</fullName>
        <label>Google URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Google_Volume__c</fullName>
        <label>Search Volume</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Yesterday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Google Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <formula>IF(Google_Last_Report__c &gt; Google_Current__c , &apos;(&apos; + IMAGE(&apos;https://sponsoredlinx.com.au/seobot/images/uparrow.png&apos;, &apos;&apos;,10,10) + TEXT(Google_Last_Report__c - Google_Current__c) + &apos;)&apos;, 

IF(Google_Last_Report__c &lt; Google_Current__c , &apos;(&apos; +IMAGE(&apos;https://sponsoredlinx.com.au/seobot/images/downarrow.png&apos;, &apos;&apos;,10,10) + TEXT(Google_Current__c - Google_Last_Report__c) +&apos;)&apos;, 

IF(Google_Current__c = 100,&apos;~&apos;,&apos;&apos;) ) )</formula>
        <label>Since last rpt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GMB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Crawl_Date__c</fullName>
        <label>Last Crawl Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority_Flag__c</fullName>
        <formula>IF(ISPICKVAL(Priority__c, &apos;High&apos;) , IMAGE(&apos;/img/samples/flag_red.gif&apos;,&apos;High priority&apos;) , 
IF(ISPICKVAL(Priority__c, &apos;Low&apos;) , IMAGE(&apos;/img/samples/flag_green.gif&apos;,&apos;Low priority&apos;) , 
&apos;&apos;))
&amp; &apos; &apos; &amp;
IF( !ISNULL(Sniper_Date__c), IMAGE(&apos;https://sponsoredlinx.com.au/seobot/images/target.png&apos;, &apos;Sniper&apos;,16,16), &apos;&apos;)
&amp; &apos; &apos; &amp;
IF( Amp_URL__c != &apos;&apos;, IMAGE(&apos;https://sponsoredlinx.com.au/seobot/images/amp.png&apos;, &apos;Amp&apos;,16,16), &apos;&apos;) 
&amp; &apos; &apos; &amp;
IF((Google_Results_Page1__c + Google_Results_Page2__c) &gt; 1, IMAGE(&apos;https://sponsoredlinx.com.au/seobot/images/pages&apos;+TEXT(Google_Results_Page1__c + Google_Results_Page2__c)+&apos;.png&apos;, TEXT(Google_Results_Page1__c + Google_Results_Page2__c) + &apos; results on pages 1-2&apos;,16,16), &apos;&apos;)
&amp; &apos; &apos; &amp;
IF(Google_URL__c != null &amp;&amp; Google_URL_Landing_1__c != null &amp;&amp; Google_URL__c != Google_URL_Landing_1__c &amp;&amp;  seoWebsites__r.Account__c != NULL, &apos; &apos; + IMAGE(&apos;/img/msg_icons/warning16.png&apos;,&apos;Landing page does not match site-search landing page&apos;), &apos;&apos;)
&amp; &apos; &apos; &amp;
IF(Google_Knowledge_Panel__c == &apos;2&apos;, IMAGE(&apos;https://sponsoredlinx.com.au/seobot/images/knowledge-on.png&apos;, &apos;Knowledge panel&apos;,16,16), IF(Google_Knowledge_Panel__c == &apos;3&apos;, IMAGE(&apos;https://sponsoredlinx.com.au/seobot/images/knowledge-off.png&apos;, &apos;Knowledge panel&apos;,16,16), &apos;&apos;))
&amp; &apos; &apos; &amp;
IF(Google_Keyword_Showing__c != &apos;&apos; &amp;&amp; Google_Keyword_Showing__c != Name, IMAGE(&apos;https://sponsoredlinx.com.au/seobot/images/switch.png&apos;, &apos;Showing results for &apos; + Google_Keyword_Showing__c,16,16) + Google_Keyword_Showing__c, &apos;&apos;)
&amp; &apos; &apos; &amp; 
IF(ISNULL(Last_Crawl_Date__c), &apos;[crawling]&apos;,
IF(Last_Crawl_Date__c != TODAY(), &apos;[crawled:&apos;+TEXT(DAY(Last_Crawl_Date__c))+&apos;/&apos;+TEXT(MONTH(Last_Crawl_Date__c))+&apos;/&apos;+TEXT(YEAR(Last_Crawl_Date__c))+&apos;]&apos;, &apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sniper_Date__c</fullName>
        <description>Date when sniper was ordered for this keyword</description>
        <label>Sniper Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yahoo_Current__c</fullName>
        <label>Yahoo Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yahoo_Last_Report__c</fullName>
        <label>Yahoo Last Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yahoo_Original__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yahoo Original</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yahoo_Yesterday__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Yahoo Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yahoo__c</fullName>
        <formula>IF(Yahoo_Last_Report__c &gt; Yahoo_Current__c , TEXT(Yahoo_Current__c) + &apos; (&apos; + IMAGE(&apos;http://sponsoredlinx.com/seobot/images/uparrow.png&apos;, &apos;&apos;,10,10) + TEXT(Yahoo_Last_Report__c - Yahoo_Current__c) + &apos;)&apos;, 

IF(Yahoo_Last_Report__c &lt; Yahoo_Current__c , TEXT(Yahoo_Current__c) + &apos; (&apos; +IMAGE(&apos;http://sponsoredlinx.com/seobot/images/downarrow.png&apos;, &apos;&apos;,10,10) + TEXT(Yahoo_Current__c - Yahoo_Last_Report__c) +&apos;)&apos;, 

IF(Yahoo_Current__c = 100,&apos;~&apos;,TEXT(Yahoo_Current__c)) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yahoo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>original_crawl__c</fullName>
        <defaultValue>true</defaultValue>
        <label>original_crawl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>seoWebsiteTheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>seoWebsiteTheme</label>
        <referenceTo>seoWebsiteThemes__c</referenceTo>
        <relationshipName>seoThemeKeywords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>seoWebsites__c</fullName>
        <label>seoWebsites</label>
        <referenceTo>seoWebsite__c</referenceTo>
        <relationshipLabel>SEO Keywords</relationshipLabel>
        <relationshipName>seoThemeKeywords</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SEO Keyword</label>
    <nameField>
        <label>Keyword</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEO Keywords</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>